--- a/package.json
+++ b/package.json
@@ -3,12 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/material": "^5.13.3",
+    "@react-spring/web": "^9.7.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-transition-group": "^4.4.6",
+    "bootstrap": "^5.1.3",
+    "classnames": "^2.3.2",
+    "emailjs-com": "^3.2.0",
+    "mdb-react-ui-kit": "^6.1.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
+    "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-minimal-pie-chart": "^8.4.0",
+    "react-modal": "^3.16.1",
+    "react-particles": "^2.9.3",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.1",
+    "react-tsparticles": "^2.9.3",
+    "react-vertical-timeline-component": "^3.6.0",
+    "reactjs-popup": "^2.0.5",
+    "tsparticles": "^2.9.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
